import "dccl/protobuf/option_extensions.proto";
import "goby/protobuf/option_extensions.proto";

message LAMSS_ENVIRONMENT_UPDATE { 
	option (dccl.msg).id = 58;
	option (dccl.msg).max_bytes = 64;
	optional double _time = 1 [(dccl.field).codec="_time", (dccl.field).in_head=true];
	optional int32 _src_id = 2 [(dccl.field).max=31, (dccl.field).min=0, (dccl.field).in_head=true];
	optional int32 _rcv_id = 3 [(dccl.field).max=31, (dccl.field).min=0, (dccl.field).in_head=true];
	optional string MessageType = 4 [default="LAMSS_ENVIRONMENT_UPDATE", (dccl.field).static_value="LAMSS_ENVIRONMENT_UPDATE", (dccl.field).codec="_static"];
        repeated EOFCoef eof_coef = 5 [(dccl.field).max_repeat=8];
        message EOFCoef
          {
            optional int32 num = 1 [(dccl.field).min=1, (dccl.field).max=10]; 
            optional double coef = 2 [(dccl.field).min=-15, (dccl.field).max=15, (dccl.field).precision=3];
          }
} 
